--- a/index.html
+++ b/index.html
@@ -8,29 +8,21 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
 </head>
-<body>
-
-  <!-- Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
+<body class="bg-accent-300">
+  <div class="credits">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
-  <div class="container">
-    <img src="./images/image-qr-code.png" alt="image-qr-code">
-    <h2>Improve your front-end skills by building projects</h2>
-    <span class=""></span>
+    Coded by Periodication.
+  </div>
+  <div class="container bg-neutral-100">
+    <img src="./images/image-qr-code.png" alt="https://www.frontendmentor.io/">
+    <div class="bottom-text">
+      <h2 class="heading-text-preset text-accent-900 fw-bold">Improve your front-end skills by building projects</h2>
+      <span class="body-text-preset text-accent-500">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</span>
+    </div>
   </div>
 </body>
 </html>
